# claude-usage

./: .gitignore  CHANGELOG.md  CLAUDE.md  FINDINGS_SUMMARY.md  LICENSE  README.md  lint.sh  monitor-claude-usage.py  monitor-usage.py  pyproject.toml  setup-hooks.sh
.claude/: settings.json
claude_usage/: __init__.py  api.py  auth.py  display.py  monitor.py  storage.py
claude_usage/code_mode/: __init__.py  api.py  auth.py  display.py  monitor.py  pacemaker_integration.py  storage.py
claude_usage/console_mode/: __init__.py  api.py  auth.py  constants.py  display.py  monitor.py  storage.py
docs/: CLAUDE_USAGE_MONITORING_INVESTIGATION.md  FINAL_FINDINGS.md
tests/: __init__.py  conftest.py  manual_test_pipx_import.py  manual_test_progress_bar.py  test_activity_line.py  test_agent_activity.py  test_api_backoff.py  test_auth_admin.py  test_auth_oauth.py  test_backoff_cache_display.py  test_backward_compatibility.py  test_both_fixes_integration.py  test_claude_code_user_usage.py  test_cli_args.py  test_codex_usage_display.py  test_coefficient_display.py  test_console_api_client.py  test_console_api_client_e2e.py  test_console_data_aggregation.py  test_console_eom_projection.py  test_console_renderer.py  test_console_settings_and_pacemaker.py  test_danger_bash_display.py  test_data_retention_7days.py  test_display.py  test_display_claude_code_user.py  test_display_deviation_safe_allowance.py  test_display_negative_timedelta.py  test_display_weekly_limit.py  test_drain_key_queue.py  test_event_feed_renderer.py  test_governance_events.py  test_langfuse_display_integration.py  test_langfuse_metrics_integration.py  test_main_e2e.py  test_main_integration.py  test_monitor_claude_code_user.py  test_monitor_console_integration.py  test_monitor_langfuse_integration.py  test_monitor_mode_detection.py  (+31 more)
(+10 files in other folders)
